---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "\npub record A {\n  A(b: B)\n}\n\npub record B {\n  B(c: C)\n}\n\npub record C {\n  C(d: Bool)\n}\n\npub fn a(a: A) {\n  case a {\n    _ if a.b.c.d -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub record A {
  A(b: B)
}

pub record B {
  B(c: C)
}

pub record C {
  C(d: Bool)
}

pub fn a(a: A) {
  case a {
    _ if a.b.c.d -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../rakun.mjs";

export class A extends $CustomType {
  constructor(b) {
    super();
    this.b = b;
  }
}

export class B extends $CustomType {
  constructor(c) {
    super();
    this.c = c;
  }
}

export class C extends $CustomType {
  constructor(d) {
    super();
    this.d = d;
  }
}

export function a(a) {
  if (a.b.c.d) {
    return 1;
  } else {
    return 0;
  }
}
